Edited BuyStock and SellStock in ETF. Completed more testing.